--- a/packages/forms/src/input/input.module.css
+++ b/packages/forms/src/input/input.module.css
@@ -29,8 +29,8 @@
 
   /** Invalid */
   &[data-invalid] {
-    border-color: var(--tones-critical);
-    outline-color: var(--tones-critical);
+    border-color: var(--tone-critical);
+    outline-color: var(--tone-critical);
   }
 
   /** Hack to prevent browser-assigned autofill color */
