--- a/packages/code/src/code.module.css
+++ b/packages/code/src/code.module.css
@@ -1,4 +1,4 @@
-@import "@uiid/tokens/code.tokens.css";
+@import "@uiid/tokens/component/code.tokens.css";
 
 /* Shared code typography */
 .code-typography {
