--- a/packages/forms/src/checkbox/checkbox.module.css
+++ b/packages/forms/src/checkbox/checkbox.module.css
@@ -1,4 +1,4 @@
-@import "@uiid/tokens/checkbox.tokens.css";
+@import "@uiid/tokens/component/checkbox.tokens.css";
 
 .checkbox {
   /** todo: replace with default */
