--- a/packages/indicators/src/badge/badge.module.css
+++ b/packages/indicators/src/badge/badge.module.css
@@ -1,4 +1,4 @@
-@import "@uiid/tokens/badge.tokens.css";
+@import "@uiid/tokens/component/badge.tokens.css";
 
 .badge {
   --badge-bg: var(--shade-foreground);
