--- a/packages/overlays/src/popover/popover.module.css
+++ b/packages/overlays/src/popover/popover.module.css
@@ -1,4 +1,4 @@
-@import "@uiid/tokens/popover.tokens.css";
+@import "@uiid/tokens/component/popover.tokens.css";
 
 .popover-popup {
   max-width: var(--popover-maxWidth);
