--- a/packages/overlays/src/drawer/drawer.module.css
+++ b/packages/overlays/src/drawer/drawer.module.css
@@ -1,5 +1,5 @@
-@import "@uiid/tokens/overlays.tokens.css";
-@import "@uiid/tokens/drawer.tokens.css";
+@import "@uiid/tokens/component/overlays.tokens.css";
+@import "@uiid/tokens/component/drawer.tokens.css";
 
 .drawer-overlay {
   position: fixed;
