refactor: rename grows to interactive, form preview

--- a/packages/buttons/src/button/button.module.css
+++ b/packages/buttons/src/button/button.module.css
@@ -103,7 +103,7 @@
   padding-inline: var(--button-size-lg-padding-x);
 }
 
-.toggle-grows {
+.toggle-interactive {
   &:hover {
     scale: var(--button-scale-hover);
   }
