fix: preview link to playground

--- a/packages/interactive/src/tabs/tabs.module.css
+++ b/packages/interactive/src/tabs/tabs.module.css
@@ -56,6 +56,11 @@
   transition-property: left, width;
   transition-duration: var(--globals-transition-timing);
   flex: none;
+  opacity: 1;
+
+  @starting-style {
+    opacity: 0;
+  }
 }
 
 .tabs-panel {
