--- a/packages/tokens/src/globals.css
+++ b/packages/tokens/src/globals.css
@@ -70,7 +70,7 @@
   }
 
   a {
-    color: inherit;
+    color: var(--theme-primary);
     text-decoration: underline;
     text-underline-offset: 2px;
 
