feat: add accordion

--- a/packages/tokens/src/globals.css
+++ b/packages/tokens/src/globals.css
@@ -32,6 +32,7 @@
     background-color: var(--shade-background);
     color: var(--shade-foreground);
     font-family: sans-serif;
+    text-wrap: pretty;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
