--- a/packages/typography/src/text/text.module.css
+++ b/packages/typography/src/text/text.module.css
@@ -15,55 +15,54 @@
 }
 
 .text-size--1 {
-  font-size: var(--typography-text--1-size);
-  font-weight: var(--typography-text--1-weight);
-  line-height: var(--typography-text--1-lineHeight);
+  font-size: var(--text--1-font-size);
+  font-weight: var(--text--1-font-weight);
+  line-height: var(--text--1-line-height);
 }
 .text-size-0 {
-  font-size: var(--typography-text-0-size);
-  font-weight: var(--typography-text-0-weight);
-  line-height: var(--typography-text-0-lineHeight);
+  font-size: var(--text-0-font-size);
+  font-weight: var(--text-0-font-weight);
+  line-height: var(--text-0-line-height);
 }
 .text-size-1 {
-  font-size: var(--typography-text-1-size);
-  font-weight: var(--typography-text-1-weight);
-  line-height: var(--typography-text-1-lineHeight);
+  font-size: var(--text-1-font-size);
+  font-weight: var(--text-1-font-weight);
+  line-height: var(--text-1-line-height);
 }
 .text-size-2 {
-  font-size: var(--typography-text-2-size);
-  font-weight: var(--typography-text-2-weight);
-  line-height: var(--typography-text-2-lineHeight);
+  font-size: var(--text-2-font-size);
+  font-weight: var(--text-2-font-weight);
+  line-height: var(--text-2-line-height);
 }
 .text-size-3 {
-  font-size: var(--typography-text-3-size);
-  font-weight: var(--typography-text-3-weight);
-  line-height: var(--typography-text-3-lineHeight);
+  font-size: var(--text-3-font-size);
+  font-weight: var(--text-3-font-weight);
+  line-height: var(--text-3-line-height);
 }
 .text-size-4 {
-  font-size: var(--typography-text-4-size);
-  font-weight: var(--typography-text-4-weight);
-  line-height: var(--typography-text-4-lineHeight);
+  font-size: var(--text-4-font--size);
+  font-weight: var(--text-4-font-weight);
+  line-height: var(--text-4-line-height);
 }
 .text-size-5 {
-  font-size: var(--typography-text-5-size);
-  font-weight: var(--typography-text-5-weight);
-  line-height: var(--typography-text-5-lineHeight);
+  font-size: var(--text-5-font-size);
+  font-weight: var(--text-5-font-weight);
+  line-height: var(--text-5-line-height);
 }
 .text-size-6 {
-  font-size: var(--typography-text-6-size);
-  font-weight: var(--typography-text-6-weight);
-  line-height: var(--typography-text-6-lineHeight);
+  font-size: var(--text-6-font-size);
+  font-weight: var(--text-6-font-weight);
+  line-height: var(--text-6-line-height);
 }
 .text-size-7 {
-  font-size: var(--typography-text-7-size);
-  font-weight: var(--typography-text-7-weight);
-  line-height: var(--typography-text-7-lineHeight);
+  font-size: var(--text-7-font-size);
+  font-weight: var(--text-7-font-weight);
+  line-height: var(--text-7-line-height);
 }
 .text-size-8 {
-  font-size: var(--typography-text-8-size);
-  font-weight: var(--typography-text-8-weight);
-  /* letter-spacing: var(--typography-text-8-leading); */
-  line-height: var(--typography-text-8-lineHeight);
+  font-size: var(--text-8-font-size);
+  font-weight: var(--text-8-font-weight);
+  line-height: var(--text-8-line-height);
 }
 
 .shade-background {
