--- a/packages/buttons/src/button/button.module.css
+++ b/packages/buttons/src/button/button.module.css
@@ -14,7 +14,7 @@
   font-weight: var(--button-font-weight);
   border: var(--globals-border-width) solid var(--button-border-color);
   border-radius: var(--globals-border-radius);
-  transition-property: background-color, border-color, color, opacity;
+  transition-property: background-color, border-color, color, opacity, scale;
   transition-duration: var(--globals-transition-duration);
   transition-timing-function: ease-in-out;
   text-decoration: none;
@@ -22,6 +22,10 @@
   &:where(:hover, :active) {
     background-color: var(--button-bg-hover);
     border-color: var(--button-bg-hover);
+  }
+
+  &:where(:active) {
+    scale: 0.99;
   }
 
   &:focus-visible {
@@ -45,7 +49,7 @@
 .button-content-container {
   scale: 1;
   transition-property: opacity, scale;
-  transition-duration: calc(var(--globals-transition-duration) / 2);
+  transition-duration: var(--globals-transition-duration);
   transition-timing-function: ease-in-out;
 
   &[data-loading="true"] {
